fix teams overflow issue

--- a/src/components/teams/teams.scss
+++ b/src/components/teams/teams.scss
@@ -16,5 +16,6 @@
 
   .teams-list-container {
     height: 400px;
+    overflow-y: scroll;
   }
 }
